some of the changes listed here under '1.41'.  You can get the version
number of the binary with the command 'daisy -v', or 'cdaisy -v' for
the daisy DLL.

When you upgrade Daisy, it is recommended that you read at least the
headlines of the changes since the last version.  For more detailed
information on changes, read the 'ChangeLog' file from the source
release.

* 4.10

** Moved SoilHeat back to 'column' from 'movement'.

** "Soil Water Conductivity (log10)" 

Renamed "Soil Hydraulic Conductivity (log10)".

** The new themic logs new use SI units.

* 4.09

** New Folva, Triada, and Agria potato varieties in 'potato.dai'.

** New examples from Italy, Poland and SLovakia in the sample directory.

** You can now log actual hydraulic conductivity.

This is the hydraulic conductivity at the end of the time step.

** You can also log thermic conductivity and capacity.

** New 'expr' keyword in the select models.

This allows arbitrary arithmetic expressions in log files.

** New "Soil Water Conductivity (log10)" log model.

This logs log10 of the actual hydraulic conductivity.

** New "Soil Heat Conductivity" and "Soil Heat Capacity" models

** Bug fixes.

* 4.08

** Easier to mix integer and number objects with literals.

* 4.07

** New "emerge" management action.

This will force a crop to emerge the next day.

* 4.06

** You can now declare sequence parameters.

I really need to document user declared parameters someday.

* 4.05

** Bug fixes.

* 4.03

** Lots of restructuring.

In particular, you can no longer choose transport algorithm on a a per
solute basis.  They are now selected per column, through the new
Soltrans attribute.

Some of the changes affect simulation results, in the order of
magnitude 1-2%.

Removed the 'active_groundwater' parameter from 'OrganicMatter'.

** Organic matter is now a component.

In practice, this means that when specifying the OrganicMatter
parameter in the default column model, you need to insert the name of